--- a/Sartain Studios Common/Sartain Studios Common.csproj
+++ b/Sartain Studios Common/Sartain Studios Common.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Sartain_Studios_Common</RootNamespace>
     <PackageId>SartainStudios.Common</PackageId>
     <Authors>John Sartain</Authors>
     <Company>Sartain Studios</Company>
-    <Version>1.4.0</Version>
+    <Version>1.5.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
