--- a/Sartain Studios Common/Sartain Studios Common.csproj
+++ b/Sartain Studios Common/Sartain Studios Common.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Httwrap" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.11.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
