--- a/Sartain Studios Common/Sartain Studios Common.csproj
+++ b/Sartain Studios Common/Sartain Studios Common.csproj
@@ -6,10 +6,11 @@
     <PackageId>SartainStudios.Common</PackageId>
     <Authors>John Sartain</Authors>
     <Company>Sartain Studios</Company>
-    <Version>1.6.3.7</Version>
+    <Version>1.6.5</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoWrapper.Core" Version="4.5.0" />
     <PackageReference Include="Httwrap" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.11.5" />
